Fix redraw flicker, max tile 30, temp character images
- Reworked the canvas draw functions, the board will no longer flicker on redraws.
- Set max position to tile 30.
- Added temporary character images for Jon and Daenerys for testing.
- Some refactoring.

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -40,8 +40,12 @@
           box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.12), 0 2px 8px 0 rgba(0, 0, 0, 0.08);
 }
 
-.character-card--image {
-  width: 100%;
+.character-card--game-image {
+  max-width: 100%;
+}
+
+.character-card--home-image {
+  max-width: 250px;
 }
 
 .character-card--header {
